Added content and links to contact.html.

--- a/Contact.html
+++ b/Contact.html
@@ -23,8 +23,12 @@
 			</header>
 
 			<main>
-				<h2>Contact Me</h2>
-
+				<h2>Contact Stephen Hayes</h2>
+				<dl>
+					<dt>Email:</dt><dd><a href="mailto:author@stephenhayesonline.com?subject=From GitHub: ">author@stephenhayesonline.com</a></dd>
+					<dt>Phone:</dt><dd>Not provided</dd>
+					<dt>Social:</dt><dd><a href="http://www.amazon.com/Stephen-Hayes/e/B00KIDTIOI/" target="_blank">Amazon</a>, <a href="https://www.facebook.com/AuthorStephenHayes" target="_blank">Facebook</a>, <a href="http://www.goodreads.com/author/show/6927324.Stephen_Hayes" target="_blank">Goodreads</a>, <a href="https://www.linkedin.com/in/SteveTheHayes" target="_blank">LinkedIn</a>, <a href="https://twitter.com/SteveTheHayes" target="_blank">Twitter</a></dd>
+				</dl>
 			</main>
 
 			<footer>&copy; Stephen Hayes.</footer>
