Renamed home.html to index.html and added content to it.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 			</header>
 
 			<main>
-				<h2>Home Page</h2>
-
+				<h2>Home</h2>
+				<p>Welcome to Stephen Hayes' portfolio. Code projects and accreditations will be shown below when they are acquired.</p>
+				<p>There are no projects or accreditations to show at this time.</p>
 			</main>
 
 			<footer>&copy; Stephen Hayes.</footer>
