--- a/About.html
+++ b/About.html
@@ -16,17 +16,17 @@
 				<nav class="navbar">
 					<ul class="nav navbar-nav">
 						<li class="nav-item"><a class="nav-link" accesskey="h" href="Home.html">Home</a></li>
-						<li class="nav-item"><a class="nav-link" accesskey="a" href="#" aria-current="page">About</a></li>
+						<li class="nav-item"><a class="nav-link" accesskey="a" href="#" aria-current="page">About Me</a></li>
 						<li class="nav-item"><a class="nav-link" accesskey="c" href="Contact.html">Contact Me</a></li>
 					</ul>
 				</nav>
 			</header>
 
 			<article>
-				<h2>About Stephen Hayes</h2>
+				<h2>About Me</h2>
 				<img src="picture.jpg" alt="Picture of Stephen Hayes" class="float-left rounded" />
-				<p>Stephen Hayes is currently studying full-stack development with <a href="https://www.learningpeople.com/au/" target="_blank">Learning People</a>. He is competent writing HTML 5 and CSS 3, and is able to implement Bootstrap 4 in web projects. He also has some experience using languages such as JavaScript, PHP, Asp.Net, and is currently learning to use Python. He has used frameworks such as jQuery and .Net. Additionally, he has experience with web hosting and relational databases (SQL Server).</p>
-				<p>Hayes' professional experience in software development has so far consisted of writing VBA macros for a large organisation to manage significant volumes of emails, and maintaining a database recording feedback of customer service agents. His experience in web development has come primarily through maintaining his <a href="https://www.stephenhayesonline.com/" target="_blank">personal website</a>, through which he promotes and sells his novels.</p>
+				<p>I am currently studying full-stack development with <a href="https://www.learningpeople.com/au/" target="_blank">Learning People</a>. I am competent writing HTML 5 and CSS 3, and am able to implement Bootstrap 4 in web projects. I also have some experience using languages such as JavaScript, PHP, Asp.Net, and am currently learning to use Python. I have used frameworks such as jQuery and .Net. Additionally, I have some experience with web hosting and relational databases (SQL Server).</p>
+				<p>My professional experience in software development has so far consisted of writing VBA macros for a large organisation to manage significant volumes of emails, and maintaining a database recording feedback of customer service agents. My experience in web development has come primarily through maintaining my <a href="https://www.stephenhayesonline.com/" target="_blank">personal website</a>, through which I promote and sell my novels.</p>
 			</article>
 
 			<footer>&copy; Stephen Hayes.</footer>
