--- a/Contact.html
+++ b/Contact.html
@@ -16,14 +16,14 @@
 				<nav class="navbar">
 					<ul class="nav navbar-nav">
 						<li class="nav-item"><a class="nav-link" accesskey="h" href="Home.html">Home</a></li>
-						<li class="nav-item"><a class="nav-link" accesskey="a" href="About.html">About</a></li>
+						<li class="nav-item"><a class="nav-link" accesskey="a" href="About.html">About Me</a></li>
 						<li class="nav-item"><a class="nav-link" accesskey="c" href="#" aria-current="page">Contact Me</a></li>
 					</ul>
 				</nav>
 			</header>
 
 			<main>
-				<h2>Contact Stephen Hayes</h2>
+				<h2>Contact Me</h2>
 				<dl>
 					<dt>Email:</dt><dd><a href="mailto:author@stephenhayesonline.com?subject=From GitHub: ">author@stephenhayesonline.com</a></dd>
 					<dt>Phone:</dt><dd>Not provided</dd>
