--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<nav class="navbar">
 					<ul class="nav navbar-nav">
 						<li class="nav-item"><a class="nav-link" accesskey="h" href="#" aria-current="page">Home</a></li>
-						<li class="nav-item"><a class="nav-link" accesskey="a" href="About.html">About</a></li>
+						<li class="nav-item"><a class="nav-link" accesskey="a" href="About.html">About Me</a></li>
 						<li class="nav-item"><a class="nav-link" accesskey="c" href="Contact.html">Contact Me</a></li>
 					</ul>
 				</nav>
@@ -24,7 +24,7 @@
 
 			<main>
 				<h2>Home</h2>
-				<p>Welcome to Stephen Hayes' portfolio. Code projects and accreditations will be shown below when they are acquired.</p>
+				<p>Welcome to my portfolio. Code projects and accreditations will be shown below when they are acquired.</p>
 				<p>There are no projects or accreditations to show at this time.</p>
 			</main>
 
