--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
 		<meta name="AUTHOR" content="Stephen Hayes">
 		<title>About - Stephen Hayes' Portfolio</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css">
-		<link rel="stylesheet" href="Style.css" type="text/css">
+		<link rel="stylesheet" href="style.css" type="text/css">
 	</head>
 
 	<body>
@@ -15,9 +15,9 @@
 				<h1>Stephen Hayes' Portfolio</h1>
 				<nav class="navbar">
 					<ul class="nav navbar-nav">
-						<li class="nav-item"><a class="nav-link" accesskey="h" href="Home.html">Home</a></li>
+						<li class="nav-item"><a class="nav-link" accesskey="h" href="index.html">Home</a></li>
 						<li class="nav-item"><a class="nav-link" accesskey="a" href="#" aria-current="page">About Me</a></li>
-						<li class="nav-item"><a class="nav-link" accesskey="c" href="Contact.html">Contact Me</a></li>
+						<li class="nav-item"><a class="nav-link" accesskey="c" href="contact.html">Contact Me</a></li>
 					</ul>
 				</nav>
 			</header>
