--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="AUTHOR" content="Stephen Hayes">
 		<title>Home - Stephen Hayes' Portfolio</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css">
-		<link rel="stylesheet" href="Style.css" type="text/css">
+		<link rel="stylesheet" href="style.css" type="text/css">
 	</head>
 
 	<body>
@@ -16,8 +16,8 @@
 				<nav class="navbar">
 					<ul class="nav navbar-nav">
 						<li class="nav-item"><a class="nav-link" accesskey="h" href="#" aria-current="page">Home</a></li>
-						<li class="nav-item"><a class="nav-link" accesskey="a" href="About.html">About Me</a></li>
-						<li class="nav-item"><a class="nav-link" accesskey="c" href="Contact.html">Contact Me</a></li>
+						<li class="nav-item"><a class="nav-link" accesskey="a" href="about.html">About Me</a></li>
+						<li class="nav-item"><a class="nav-link" accesskey="c" href="contact.html">Contact Me</a></li>
 					</ul>
 				</nav>
 			</header>
