Add line breaks for readability of long lines.

--- a/Contact.html
+++ b/Contact.html
@@ -15,9 +15,15 @@
 				<h1>Stephen Hayes' Portfolio</h1>
 				<nav class="navbar">
 					<ul class="nav navbar-nav">
-						<li class="nav-item"><a class="nav-link" accesskey="h" href="index.html">Home</a></li>
-						<li class="nav-item"><a class="nav-link" accesskey="a" href="about.html">About Me</a></li>
-						<li class="nav-item"><a class="nav-link" accesskey="c" href="#" aria-current="page">Contact Me</a></li>
+						<li class="nav-item">
+							<a class="nav-link" accesskey="h" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" accesskey="a" href="about.html">About Me</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" accesskey="c" href="#" aria-current="page">Contact Me</a>
+						</li>
 					</ul>
 				</nav>
 			</header>
@@ -25,9 +31,20 @@
 			<main>
 				<h2>Contact Me</h2>
 				<dl>
-					<dt>Email:</dt><dd><a href="mailto:author@stephenhayesonline.com?subject=From GitHub: ">author@stephenhayesonline.com</a></dd>
-					<dt>Phone:</dt><dd>Not provided</dd>
-					<dt>Social:</dt><dd><a href="http://www.amazon.com/Stephen-Hayes/e/B00KIDTIOI/" target="_blank">Amazon</a>, <a href="https://www.facebook.com/AuthorStephenHayes" target="_blank">Facebook</a>, <a href="http://www.goodreads.com/author/show/6927324.Stephen_Hayes" target="_blank">Goodreads</a>, <a href="https://www.linkedin.com/in/SteveTheHayes" target="_blank">LinkedIn</a>, <a href="https://twitter.com/SteveTheHayes" target="_blank">Twitter</a></dd>
+					<dt>Email:</dt>
+					<dd>
+						<a href="mailto:author@stephenhayesonline.com?subject=From GitHub: ">author@stephenhayesonline.com</a>
+					</dd>
+					<dt>Phone:</dt>
+					<dd>Not provided</dd>
+					<dt>Social:</dt>
+					<dd>
+						<a href="http://www.amazon.com/Stephen-Hayes/e/B00KIDTIOI/" target="_blank">Amazon</a>,
+						<a href="https://www.facebook.com/AuthorStephenHayes" target="_blank">Facebook</a>,
+						<a href="http://www.goodreads.com/author/show/6927324.Stephen_Hayes" target="_blank">Goodreads</a>,
+						<a href="https://www.linkedin.com/in/SteveTheHayes" target="_blank">LinkedIn</a>,
+						<a href="https://twitter.com/SteveTheHayes" target="_blank">Twitter</a>
+					</dd>
 				</dl>
 			</main>
 
