--- a/index.html
+++ b/index.html
@@ -15,17 +15,28 @@
 				<h1>Stephen Hayes' Portfolio</h1>
 				<nav class="navbar">
 					<ul class="nav navbar-nav">
-						<li class="nav-item"><a class="nav-link" accesskey="h" href="#" aria-current="page">Home</a></li>
-						<li class="nav-item"><a class="nav-link" accesskey="a" href="about.html">About Me</a></li>
-						<li class="nav-item"><a class="nav-link" accesskey="c" href="contact.html">Contact Me</a></li>
+						<li class="nav-item">
+							<a class="nav-link" accesskey="h" href="#" aria-current="page">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" accesskey="a" href="about.html">About Me</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" accesskey="c" href="contact.html">Contact Me</a>
+						</li>
 					</ul>
 				</nav>
 			</header>
 
 			<main>
 				<h2>Home</h2>
-				<p>Welcome to my portfolio. Code projects and accreditations will be shown below when they are acquired.</p>
-				<p>There are no projects or accreditations to show at this time.</p>
+				<p>
+					Welcome to my portfolio.
+					Code projects and accreditations will be shown below when they are acquired.
+				</p>
+				<p>
+					There are no projects or accreditations to show at this time.
+				</p>
 			</main>
 
 			<footer>&copy; Stephen Hayes.</footer>
